--- a/home_page.html
+++ b/home_page.html
@@ -4,10 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="index, follow" />
-<meta name="language" content="russian" />
+<meta name="language" content="english" />
 <meta name="keywords" content="БОПП" />
 
-<title>Document</title>
+<title>E-commerce</title>
 
 <link rel="stylesheet" href="./css/home_page.css">
 <link rel="stylesheet" href="./css/index.css">
@@ -58,8 +58,7 @@
 <div class="modal-page-cart">
     <div class="payment_page">
         <div class="links">
-            <a href="product_page.html">Main information</a> | <a href="shipping_page.html">Shipping</a> | <a
-                class="active" href="#">Payment</a>
+            <a href="product_page.html">Main information</a> | <a href="shipping_page.html">Shipping</a> | <a class="active" href="#">Payment</a>
         </div>
         <div class="sides">
             <div class="left_side">
@@ -68,7 +67,7 @@
                     <div class="customs_info">
                         <p class="name">Kate Varnava</p>
                         <p class="phone_num">+7898687675757</p>
-                        <p class="street_name">Russia, Moscow Lomonosova st 12,46</p>
+                        <p class="street_name">Germany, Berlin Potsdamer Platz 39</p>
                         <p class="zip_code">142784</p>
                     </div>
                     <div class="payment_details">
@@ -143,17 +142,20 @@
             </div>
             <div class="categorys">
                 <h2>Category</h2>
-            </div> <!-- Category-->
+            </div>
+            <!-- Category-->
             <div class="price">
                 <h2>Price</h2>
                 <input type="range" id="range" step="100" value="300" min="300" max="3000">
                 <span id="range_span"></span>
-            </div> <!-- Price-->
-            <div class="sort_butns">
-                <button class="sort_br">Сортировать</button>
-                <button class="sort_br_dl">Очищать</button>
             </div>
-        </div> <!-- Title-->
+            <!-- Price-->
+            <div class="sort_butns">
+                <button class="sort_br">Sort</button>
+                <button class="sort_br_dl">Clear</button>
+            </div>
+        </div>
+        <!-- Title-->
     </div>
     </div>
     <div class="right-side">
@@ -213,13 +215,13 @@
         <div class="bottom-right">
             <div class="address">
                 <h3>Address</h3>
-                <p>lane Pushkina, 53</p>
-                <p>Moscow, Russia</p>
+                <p>Potsdamer Platz 39</p>
+                <p>Berlin, Germany</p>
             </div>
             <div class="buy">
                 <h3>Get in touch</h3>
-                <p>+79522459609</p>
-                <p>nbakhritdinova13@mail.ru</p>
+                <p>+451785529668</p>
+                <p>customerservice@gmail.com</p>
             </div>
             <div class="social">
                 <h3>Social</h3>
