--- a/product_page.html
+++ b/product_page.html
@@ -1,4 +1,4 @@
-<!-- <meta charset="UTF-8">
+<meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,12 +10,12 @@
         <div class="sides">
             <div class="left_side">
                 <div class="links">
-                    <a href="">Home |</a> <a href="#">Catalog |</a> <a  href="#">All</a> <a class="active1" href="#">| Bookcase</a>
+                    <a href="">Home |</a> <a href="#">Catalog |</a> <a href="#">All</a> <a class="active1" href="#">| Bookcase</a>
                 </div>
                 <img src="?">
             </div>
-            <div class="right_side"> 
-                 <div class="product_details">
+            <div class="right_side">
+                <div class="product_details">
                     <div class="heading">
                         <h3>Lorem</h3>
                         <span>Lorem, ipsum dolor.</span>
@@ -24,17 +24,17 @@
                         <h3>300.99$</h3>
                     </div>
                     <div class="product_info">
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sit eveniet qui autem sunt corporis!</p>
-                   </div> 
-                </div> 
-                 <div class="color_options">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sit eveniet qui autem sunt corporis!</p>
+                    </div>
+                </div>
+                <div class="color_options">
                     <h5>Color</h5>
                     <div class="color_subheading">
                         <div></div>
                         <div></div>
                     </div>
                     <h5>Quantity</h5>
-                </div> 
+                </div>
                 <div class="product_quantity">
                     <div class="product_tool">
                         <div>-</div>
@@ -47,7 +47,7 @@
                             <h5>Add to cart</h5>
                         </a>
                     </div>
-                </div> 
+                </div>
                 <div class="product_distribution">
                     <div class="dist_preview">
                         <a href="#">Main information</a>
@@ -59,31 +59,31 @@
                         <div></div>
                         <div></div>
                     </div>
-                </div> 
-            </div> 
+                </div>
+            </div>
         </div>
         <div class="recommendations">
-        <div class="def_block">
-        <h2>Recommended</h2>
+            <div class="def_block">
+                <h2>Recommended</h2>
             </div>
-           <div class="recommendation_img">
-               <a href="?">
-                   <img src="" alt="">
-               </a>
-               <a href="?">
-                   <img src="" alt="">
-               </a>
-               <a href="?">
-                   <img src="" alt="">
-               </a>
-               <a href="?">
-                   <img src="" alt="">
-               </a>
-           </div>
+            <div class="recommendation_img">
+                <a href="?">
+                    <img src="" alt="">
+                </a>
+                <a href="?">
+                    <img src="" alt="">
+                </a>
+                <a href="?">
+                    <img src="" alt="">
+                </a>
+                <a href="?">
+                    <img src="" alt="">
+                </a>
+            </div>
         </div>
     </div>
 </div>
 
 
 <script src="./js/data.js"></script>
-<script type="module" src="./js/index.js"></script> -->
+<script type="module" src="./js/index.js"></script>
